# pink-camp-2023

./: .env  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
app/: config.py  crud.py  database.py  main.py  models.py  schemas.py
