[tool.poetry]
name = "blog"
version = "0.1.0"
description = "Simple blog backend."
authors = ["magdapoppins <magdalena.stenius@wolt.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"
SQLAlchemy = "^2.0.20"
psycopg2-binary = "^2.9.7"
pydantic = "^2.2.1"
uvicorn = "^0.23.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
no_implicit_optional = true
strict_equality = true
